# coding-project

Calculator/: CMakeLists.txt  Notes.md  calculator.cpp  calculatorDesign.cpp  calculatorDesign.h  calculatorFunctionality.cpp  design.cpp  functionality.cpp  helperFunctions.cpp  helperFunctions.h
Calculator/Main/: Notes.md  calculator.cpp
Calculator/Main/Design/: calculatorDesign.cpp
Calculator/Main/Functionality/: calculatorFunctionality.cpp
Calculator/Main/Helper Functions/: helperFunctions.cpp
Calculator/include/: calculatorFunctionality.h
Calculator/src/: calculator.cpp  calculatorDesign.cpp  calculatorFunctionality.cpp  helperFunctions.cpp
Calculator/tests/: testCalculation.cpp
To-Do list/: CMakeLists.txt  main.cpp  notes.md
To-Do list/include/: helperFunctions.h  taskFunctionality.h
To-Do list/src/: helperFunctions.cpp  main.cpp  taskFunctionality.cpp
